	  Rather, only disable Rx interrupts when the Rx ring buffer may be empty.
	* include/nuttx/usb/audio.h:  USB Audio 1.0 definitions (in progress).
	* arch/arm/src/stm32/stm32fxx_dma.c:  STM32 F4 DMA now supports circular
	  buffer mode (contributed by Mike Smith)
	* arch/arm/src/stm32/stm32_serial.c:  The serial driver can now support
	  Rx DMA into a circular buffer (contributed by Mike Smith)
	* configs/pic32mx7mmb: Beginning of a configuration for the Mikroelektronka
	  PIC32MX7 Multimedia Board (MMB).
	* net/recvfrom.c:  Fix a compilation problem.  Some UDP logic was conditioned
	  on TCP, not UDP.
	* drivers/usbdev/cdcacm.c: Fix an infinite loop that occurs when the serial
	  device is unregisters.
	* arch/arm/src/stm32/stm32_otgfs.c: The driver needs to reset the software (in
	  order to flush the requests) and to disable the software connection when the
	  device is unregistered.
	* include/sys/prctl.h, sched/prctl.c, include/pthread.h:  Add interfaces to
	  support getting and setting of the thread or task name.
	* configs/ubw32:  Added a configuration to support the Sparkfun UBW32 PIC32 board.
	* configs/ubw32/nsh:  Added an NSH configuration for the Sparkfun UBW32 PIC32 board.
	* configs/ubw32/up_buttons.c:  Added button support for Bit Whacker board.
	* configs/stm3240g-eval/nxconsole:  Added a configuration to run the NSH
	  shell in an NX window for the STM3240G-EVAL board.
	* include/cxx/cunistd:  C++ header file to make sure that everything in
	  unistd.h is in the std:: namespace.
	* configs/sim/nxwm:  Added a configuration for testing the NuttX Window Manager
	  (NxWM)
	* fs/fs_fcntl.h:  On success, always returned OK.  However, some fcntl commands
	  require returning other values on success.
	* Various files.  Fix warnings about variables that were initialized by not used.
	* configs/sim/*/defconfig:  Changes to build a 32-bit simulation on a 32-bit
	  platform did not make into all of the Make.defs files.