@@ -454,11 +454,11 @@ CONFIG_NET_RESOLV_ENTRIES=4
 # CONFIG_NXTK_BORDERWIDTH
 #   Specifies with with of the border (in pixels) used with
 #   framed windows.  The default is 4.
-# CONFIG_NXTK_BORDERCOLOR1 and CONFIG_NXTK_BORDERCOLOR2
+# CONFIG_NXTK_BORDERCOLOR1, CONFIG_NXTK_BORDERCOLOR2, CONFIG_NXTK_BORDERCOLOR3
 #   Specify the colors of the border used with framed windows.
-#   CONFIG_NXTK_BORDERCOLOR2 is the shadow side color and so
-#   is normally darker.  The default is medium and dark grey,
-#   respectively
+#   CONFIG_NXTK_BORDERCOLOR2 is the shadow side color and so is normally darker.
+#   CONFIG_NXTK_BORDERCOLOR3 is the shiny side color and so is normally brighter.
+#   The default is mediumdark grey, and light grey, respectively
 # CONFIG_NXTK_AUTORAISE
 #   If set, a window will be raised to the top if the mouse position
 #   is over a visible portion of the window.  Default: A mouse
@@ -534,6 +534,7 @@ CONFIG_NX_KBD=y
 #CONFIG_NXTK_BORDERWIDTH=4
 CONFIG_NXTK_BORDERCOLOR1=0x005a96bd
 CONFIG_NXTK_BORDERCOLOR2=0x00233a49
+CONFIG_NXTK_BORDERCOLOR3=0x00f8f8f8
 CONFIG_NXTK_AUTORAISE=n
 CONFIG_NXFONT_SANS22X29=n
 CONFIG_NXFONT_SANS23X27=y
